--- a/Dashboard/src/app/login/login.component.html
+++ b/Dashboard/src/app/login/login.component.html
@@ -5,6 +5,8 @@
       <input type="password" class="form-control mb-4" placeholder="Mot de passe" formControlName="password">
       <button [disabled]="!loginForm.valid || formSubmitted" class="btn btn-info btn-block" type="submit">Log
         in</button>
+        <p>Login : blue@cake.com | pass : admin</p>
+        <!-- <p>password : admin</p> -->
     </form>
     <div *ngIf="unauthorized" class="alert alert-danger">
       Email / mot de passe invalide
